# agentcage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
.github/workflows/: ci.yml
docs/: claude-code.md  policy.md
examples/: hook.sh
scripts/: smoke.sh
src/: audit.rs  cli.rs  engine.rs  main.rs  pattern.rs  policy.rs  sandbox.rs  timefmt.rs
tests/: cli.rs
