[package]
name = "agentcage"
version = "0.1.0"
edition = "2021"
description = "Per-command Landlock sandbox for AI coding agents: file/network allowlists in your repo, audit log, Claude Code hook."
license = "MIT"
repository = "https://github.com/JaydenCJ/agentcage"
keywords = ["sandbox", "landlock", "security", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
landlock = "0.4"
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
